# talks

./: .gitignore  _quarto.yml  ai_training.qmd  external.yml  index.qmd  styles.css
.github/workflows/: slides.yml  trigger.yml
_extensions/image-credit/: _extension.yml  image-credit.lua
_extensions/two-col/: _extension.yml  two-col.lua
_extensions/video-credit/: _extension.yml  video-credit.lua
_filters/: .gitignore  slugify.lua
_site/: ai_training.html
ai_training/: index.qmd
ansible/: inventory_kubevirt.yml  requirements.yml  web.yml
ansible/roles/web/files/: talks.conf
ansible/roles/web/handlers/: main.yml
ansible/roles/web/tasks/: main.yml
arc_model/: index.qmd
arc_model/assets/sources/graphviz/: arc.dot
automating_experimentation/: index.qmd
automating_experimentation/assets/: render_chess.sh  render_diagrams.sh
automating_experimentation/assets/sources/chess/: kriegspiel_position_1.fen  kriegspiel_position_2.fen  starting_position.fen
automating_experimentation/assets/sources/graphviz/: triangle.dot
supporting_code/: pyproject.toml
supporting_code/src/supporting_code/: __init__.py  chessboard.py  cli.py
supporting_code/tests/: test_package.py
